--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "castlecss-buttons": "^0.5.0",
     "castlecss-core": "^2.1.0",
     "castlecss-icons": "^1.0.2",
-    "castlecss-notifications": "^1.0.0"
+    "castlecss-notifications": "^1.0.0",
+    "jquery" : "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
@@ -41,6 +42,7 @@
     "grunt-postcss": "^0.8.0",
     "grunt-sass": "^2.0.0",
     "jit-grunt": "^0.10.0",
-    "pixrem": "^3.0.0"
+    "pixrem": "^3.0.0",
+    "webpack": "^2.2.0"
   }
 }
