--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
   "dependencies": {
     "castlecss-buttons": "^0.5.0",
     "castlecss-core": "^2.1.0",
+    "castlecss-forms": "^1.0.7",
     "castlecss-icons": "^1.0.2",
     "castlecss-notifications": "^1.0.0",
-    "jquery" : "^3.1.1"
+    "jquery": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
